--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 eureka.client.register-with-eureka=true
 logging.level.org.springframework.security=DEBUG
+server.compression.enabled=false
 
+server.http2.enabled=false
+spring.mvc.async.request-timeout=60000
