--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ server.compression.enabled=false
 
 server.http2.enabled=false
 spring.mvc.async.request-timeout=60000
+
+#MAIL
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=yessine_blancoo@hotmail.fr
+spring.mail.password=gitjxopwvzxelluu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
