--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 eureka.client.service-url.defaultZone=http://localhost:6969/eureka/
 server.port=8082
 
-spring.application.name=contract-service
+spring.application.name=PIBlog
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/contract?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/Blog?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,5 +18,9 @@ eureka.client.register-with-eureka=true
 logging.level.org.springframework.security=DEBUG
 server.compression.enabled=false
 
+
 server.http2.enabled=false
 spring.mvc.async.request-timeout=60000
+
+spring.security.user.name=admin
+spring.security.user.password=admin
