--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ spring.mvc.async.request-timeout=60000
 
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zouaghi.mohamedaziz@esprit.tn
+spring.mail.password=utke emml ybwz khec
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
