--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=DevisPaiement
 spring.jpa.show-sql=true
 
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://localhost:3306/examassurancedb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/exam?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
