--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-gif.upload.directory=src/main/resources/static/assets/gifs/
+gif.upload.directory=Pidev2025_Spring/src/main/resources/static/assets/gifs/
+
+
+# File upload settings
+file.upload-dir=Pidev2025_Spring/src/main/resources/static/assets/images/
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
