--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
     </parent>
 
     <groupId>tn.esprit</groupId>
-    <artifactId>ContractManagement</artifactId>
+    <artifactId>BlogManagement</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ContractManagement</name>
-    <description>Contract Management System</description>
+    <name>BlogManagement</name>
+    <description>Blog Management System</description>
 
     <properties>
         <java.version>17</java.version>
